[package]
name = "rust-rvm-vmm"
version = "0.1.0"
authors = ["gjz010 <gjz010944@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rcore-user = {path = "../rust"}
rvm = {git = "https://github.com/rcore-riscv-hypervisor-dev/RVM", rev = "fa31039"}
spin = "0.5"
rust-rvm-vmm-devices = {path = "./rust-rvm-vmm-devices"}